--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary= true
     }
     buildTypes {
         release {
@@ -48,5 +49,11 @@ dependencies {
     implementation "androidx.transition:transition:1.3.0"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    //AndroidX
+    implementation "androidx.cardview:cardview:1.0.0"
+
+
 }
 apply plugin: 'com.google.gms.google-services'
